tests/matrices/invalid/invalid_bad_banner.mtx
%%__BadBanner matrix coordinate real general
% invalid banner
4 4 0
